<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">eSaansad</string>
    <string name="title_section1">Dashboard</string>
    <string name="title_section2">Proposal</string>
    <string name="title_section3">Projects</string>
    <string name="title_section4">Link Aadhar</string>
    <string name="title_section5">Logout</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_web_view">WebView</string>
    <string name="title_activity_google_plus_sign_in">GooglePlusSignInActivity</string>

    <!-- Button text -->
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>
    <string name="hello_world">Hello world!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- name for the dashboard first line -->
    <string name="expenditure_bar_chart_title">Expenditure record of previous years</string>

    <!-- Tab activity -->
    <string name="title_activity_esansad_tab">Proposals</string>
    <string name="title_activity_aadhar">AadharActivity</string>
    <string name="title_activity_proposal_details">ProposalDetails</string>



    <string-array name="categories">
        <item>Education</item>
        <item>Health</item>
        <item>Sports</item>
        <item>Irrigation</item>
    </string-array>
    <string name="proposal_title">Title for your proposal</string>
    <string name="proposal_location">Location</string>
    <string name="proposal_description">Description</string>
    <string name="proposal_duration">Estimated budget</string>
    <string name="proposal_estimate">Estimated duration</string>
    <string name="upload_image">Upload Image</string>
    <string name="submit_proposal">Submit</string>
    <string name="title_activity_new_proposal">NewProposal</string>


</resources>
